--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         overflow-x: hidden;
     }
 
-    /* Фон Матрицы */
+    /* Фон */
     #matrix-canvas {
         position: fixed;
         top: 0;
@@ -264,7 +264,7 @@
         return xml;
     }
 
-    // Фон Матрицы
+    // Фон
     const canvas = document.getElementById('matrix-canvas');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
