--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
 /* #url, #sitemap-output {
     width: calc(100% - 10px);
 } */
-
+input[type=number] {
+    accent-color: #00ff41; /* зелёные стрелки */
+    color-scheme: dark;    /* чтобы фон и стрелки были тёмные */
+}
 
 
 
