--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Generator Sitemap</title>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
-    /* Базовые стили терминала */
+    /* Basic terminal styles */
     body {
         background-color: #000;
         color: #00ff41;
@@ -20,7 +20,7 @@
         overflow-x: hidden;
     }
 
-    /* Фон */
+    /* Background */
     #matrix-canvas {
         position: fixed;
         top: 0;
@@ -55,7 +55,7 @@
         color: #00ff41;
         text-align: center;
         margin-bottom: 20px;
-        white-space: pre; /* Для эффекта печати */
+        white-space: pre; /* For printing effect */
     }
 
     /* input, select, textarea {
@@ -82,7 +82,7 @@
     /* font-family: monospace; */
     font-family: 'Share Tech Mono', monospace;
     font-size: 14px;
-    box-sizing: border-box; /* вот это важно */
+    box-sizing: border-box; /* this is important */
 }
 
     button {
@@ -119,7 +119,7 @@
         box-sizing: border-box;
     }
 
-    /* Подпись VS */
+    /* Signature VS */
     #vs-signature {
         position: fixed;
         bottom: 10px;
@@ -142,8 +142,8 @@
     width: calc(100% - 10px);
 } */
 input[type=number] {
-    accent-color: #00ff41; /* зелёные стрелки */
-    color-scheme: dark;    /* чтобы фон и стрелки были тёмные */
+    accent-color: #00ff41; /* green arrows */
+    color-scheme: dark;    /* so that the background and arrows are dark */
 }
 
 
@@ -159,39 +159,39 @@ input[type=number] {
     <label for="url">URL:</label>
     <input type="text" id="url" placeholder="Введите URL" />
 
-    <label for="priority">Приоритет:</label>
+    <label for="priority">Priority:</label>
     <input type="number" id="priority" value="0.5" step="0.1" min="0" max="1" />
 
-    <label for="changefreq">Частота изменения:</label>
+    <label for="changefreq">Frequency of change:</label>
     <select id="changefreq">
-        <option value="always">Всегда</option>
-        <option value="hourly">Каждый час</option>
-        <option value="daily">Каждый день</option>
-        <option value="weekly">Каждую неделю</option>
-        <option value="monthly">Каждый месяц</option>
-        <option value="yearly">Каждый год</option>
-        <option value="never">Никогда</option>
+        <option value="always">Always</option>
+        <option value="hourly">Every hour</option>
+        <option value="daily">Every day</option>
+        <option value="weekly">Every week</option>
+        <option value="monthly">Every month</option>
+        <option value="yearly">Every year</option>
+        <option value="never">Never</option>
     </select>
 
-    <label for="lastmod">Последнее изменение (YYYY-MM-DD):</label>
+    <label for="lastmod">Last modified (YYYY-MM-DD):</label>
     <input type="date" id="lastmod" />
 
-    <button id="add-url">Добавить URL</button>
-    <button id="generate-sitemap">Сгенерировать Sitemap</button>
-    <button id="reset-all">Сброс</button>
-    <button id="download-sitemap">Скачать sitemap.xml</button>
+    <button id="add-url">Add URL</button>
+    <button id="generate-sitemap">Generate Sitemap</button>
+    <button id="reset-all">Reset</button>
+    <button id="download-sitemap">Download sitemap.xml</button>
 
-    <h2>Список URL</h2>
+    <h2>List URL</h2>
     <ul id="url-list"></ul>
 
-    <h2>Сгенерированный Sitemap XML</h2>
+    <h2>Generated Sitemap XML</h2>
     <textarea id="sitemap-output" rows="10" readonly></textarea>
 </div>
 
 <div id="vs-signature">VS</div>
 
 <script>
-    // Эффект печатающегося заголовка
+    // Printed Header Effect
     const titleText = "Generator Sitemap";
     let i = 0;
     function typeTitle() {
@@ -203,7 +203,7 @@ input[type=number] {
     }
     typeTitle();
 
-    // Логика Sitemap (как в твоем коде)
+    // Sitemap Logic
     const urlList = [];
 
     document.getElementById('add-url').onclick = function() {
@@ -267,7 +267,7 @@ input[type=number] {
         return xml;
     }
 
-    // Фон
+    // Background
     const canvas = document.getElementById('matrix-canvas');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
