--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ input[type=number] {
     <h1 id="title"></h1>
 
     <label for="url">URL:</label>
-    <input type="text" id="url" placeholder="Введите URL" />
+    <input type="text" id="url" placeholder="Enter URL" />
 
     <label for="priority">Priority:</label>
     <input type="number" id="priority" value="0.5" step="0.1" min="0" max="1" />
